--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
             <div class="navbar navbar-default alt-sombra-primaria">
                 <div>
                     <div class="alt-informacoes-usuario-container dropdown alt-hand pull-right alt-espacamento-left">
-                        <img ng-src="{{controlcabec.informacoesUsuario.avatar}}" alt="imagem" class="alt-imagem-usuario-cabecalho alt-hand" data-toggle="dropdown" src="{{controlcabec.informacoesUsuario.avatar}}">
+                        <img id="imagemPerfilPassaporte"ng-src="{{controlcabec.informacoesUsuario.avatar}}" alt="imagem" class="alt-imagem-usuario-cabecalho alt-hand" data-toggle="dropdown" src="{{controlcabec.informacoesUsuario.avatar}}">
                         <div class="dropdown-menu">
                             <div id="alt-informacoes-usuario-dropdown">
                                 <div class="col-xs-4 hidden-xs row">
@@ -52,7 +52,7 @@
                                 </div>
                                 <hr class="visible-xs col-xs-12 alt-hr-separador-info">
                                 <hr class="hidden-xs col-xs-12 alt-hr-separador-info">
-                                <a ng-href="{{controlcabec.logoutLink}}" class="btn btn-default pull-right hidden-xs">Sair</a>
+                                <a id="btnSair" ng-href="{{controlcabec.logoutLink}}" class="btn btn-default pull-right hidden-xs">Sair</a>
                                 <button type="button" class="btn btn-default pull-left hidden-xs">Feelin' lucky?</button>
                                 <button type="button" class="btn btn-default pull-right btn-block alt-espacamento-bottom visible-xs">Feelin' lucky?</button>                            
                                 <a ng-href="{{controlcabec.logoutLink}}" class="btn btn-default btn-block visible-xs alt-clear-both">Sair</a>
@@ -62,7 +62,7 @@
                     <div class="alt-opcoes-usuario-container dropdown pull-right">
                         <div class="alt-opcoes-usuario-cabecalho alt-hand" data-toggle="dropdown">
                             <span class="alt-opcoes-usuario-cabecalho">
-                                <i class="fa fa-fw fa-cubes alt-icone-opcoes-usuario-cabecalho"></i>
+                                <i id="btnProdutos" class="fa fa-fw fa-cubes alt-icone-opcoes-usuario-cabecalho"></i>
                             </span>
                         </div>
                         <div class="dropdown-menu">
@@ -77,8 +77,8 @@
                         </div>
                     </div> 
                     <div class="navbar-header">
-                        <a class="navbar-brand hidden-xs" href="/home">DEPGod Calculator</a>
-                        <a class="navbar-brand alt-espacamento-left visible-xs" href="/home">DEPGod Calculator</a>
+                        <a id="nomeCalcHeader" class="navbar-brand hidden-xs" href="/home">DEPGod Calculator</a>
+                        <a id="nomeCalcHeaderxs"class="navbar-brand alt-espacamento-left visible-xs" href="/home">DEPGod Calculator</a>
                     </div>  
                 </div>
             </div>
