Novos testes Protractor + minor fixes

--- a/app/index.html
+++ b/app/index.html
@@ -88,20 +88,20 @@
         </main>
     <footer id="alt-rodape" class="transition">
         <div class="alt-direitos-reservados pull-left hidden-xs">
-            <span>DEPGod Calculator 1.0 - Todos os direitos reservados ao Souza.sup.erp</span>
+            <span id="nomeRodape">DEPGod Calculator 1.0 - Todos os direitos reservados ao Souza.sup.erp</span>
         </div>
         <div class="alt-redirecionamentos-rodape hidden-xs">
-            <a class="pull-right alt-espacamento-left" href="http://alterdata.com.br" target="_blank">
-                <img src="./app/images/logo_branco.png">
+            <a id="idAlterdata" class="pull-right alt-espacamento-left" href="http://alterdata.com.br" target="_blank">
+                <img id="logoAlterdata" src="./app/images/logo_branco.png">
             </a>
         </div>
         <div class="alt-links-aux-alterdata pull-right hidden-xs">
-          <a href="http://www.alterdata.com.br/contato" target="_blank">
-            <span>Contato</span>
+          <a id="idContato" href="http://www.alterdata.com.br/contato" target="_blank">
+            <span id="labelContato">Contato</span>
           </a>
           <span class="alt-separador-redirecionamentos-rodape">|</span>
-          <a href="http://cliente.alterdata.com.br/LoginCentral.aspx" target="_blank">
-            <span>Suporte</span>
+          <a id="idSuporte" href="http://cliente.alterdata.com.br/LoginCentral.aspx" target="_blank">
+            <span id="labelSuporte">Suporte</span>
           </a> 
         </div>
         <a class="text-center visible-xs alt-hand" href="http://alterdata.com.br" target="_blank">
